[package]
name = "pictas-interface-rs"
version = "0.1.0"
authors = ["bigbass1997 <bigbass1997.website@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0"
strum = "0.20.0"
strum_macros = "0.20.1"
chrono = "0.4.19"